# bewise

./: .gitignore  README.md  pyproject.toml
docs/: structure.md  task.md
services/fastapi/: .env-example  Dockerfile  main.py  settings.py
services/fastapi/api/routes/: aplications.py
services/fastapi/db/: funcs.py  session.py
services/fastapi/models/: applications.py
services/fastapi/schemas/: applications_schemas.py
services/kafka/: Dockerfile
services/postgres/: init.sql
tests/fastapi/: test_applications.py
