[tool.poetry]
name = "bewise"
version = "0.1.0"
description = "Test project for Bewise.ai"
authors = ["Dmitry Malyshev <i@dmitrymalyhsev.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
asyncpg = "^0.30.0"
aiokafka = "^0.12.0"
pydantic = "^2.10.5"
pytest = "^8.3.4"
alembic = "^1.14.0"
sqlalchemy = "^2.0.37"
pydantic-settings = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
